Add i18 translation support

--- a/partials/content.hbs
+++ b/partials/content.hbs
@@ -54,7 +54,7 @@
         <div class="single-footer-left">
             {{#prev_post}}
             <div class="navigation navigation-previous">
-                <a class="navigation-link" href="{{url}}" aria-label="Previous post">
+                <a class="navigation-link" href="{{url}}" aria-label="{{t "Previous post"}}"">
                     <span class="navigation-icon">{{> "icons/arrow-left"}}</span>
                 </a>
             </div>
@@ -85,7 +85,7 @@
         <div class="single-footer-right">
             {{#next_post}}
             <div class="navigation navigation-next">
-                <a class="navigation-link" href="{{url}}" aria-label="Next post">
+                <a class="navigation-link" href="{{url}}" aria-label="{{t "Next post"}}">
                     <span class="navigation-icon">{{> "icons/arrow-right"}}</span>
                 </a>
             </div>
