--- a/partials/cover.hbs
+++ b/partials/cover.hbs
@@ -22,11 +22,11 @@
             {{#unless @site.members_invite_only}}
                 {{#unless @member}}
                     <form class="form-wrapper cover-form" data-members-form>
-                        <input class="auth-email" type="email" name="email" data-members-email placeholder="Your email address" required="true">
-                        <button class="form-button" type="submit" aria-label="Submit">
-                            <span class="default">Subscribe</span>
+                        <input class="auth-email" type="email" name="email" data-members-email placeholder="{{t "Your email address"}}" required="true">
+                        <button class="form-button" type="submit" aria-label="{{t "Submit"}}">
+                            <span class="default">{{t "Subscribe"}}</span>
                             <span class="loader">{{> "icons/loader"}}</span>
-                            <span class="success">Email sent</span>
+                            <span class="success">{{t "Email sent"}}</span>
                         </button>
                     </form>
                 {{/unless}}
